tests/golden/kubernetes_1.32/prometheus/prometheus/30_default-instance_alertmanager_networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    source: https://github.com/projectsyn/component-prometheus
  labels:
    app.kubernetes.io/component: alert-router
    app.kubernetes.io/instance: alertmanager-default-instance
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 0.28.1
  name: alertmanager-alertmanager-default-instance
  namespace: syn-prometheus
spec:
  egress:
    - {}
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 9093
          protocol: TCP
        - port: 8080
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: alertmanager
      ports:
        - port: 9094
          protocol: TCP
        - port: 9094
          protocol: UDP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: alert-router
      app.kubernetes.io/instance: alertmanager-default-instance
      app.kubernetes.io/name: alertmanager
      app.kubernetes.io/part-of: kube-prometheus
  policyTypes:
    - Egress
    - Ingress
